--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <body>
 		<div class="header">
 			<div class="logo">
-				<img src="src/assets/logo.png" alt="logo">
+				<img src="/images/logo.png" alt="logo">
 			</div>
 			<div>
 				<h2>Brain Wiring</h2>
