--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/png" href="/images/icon.png" />
 		<link rel="stylesheet" href="src/css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Sorting Cards</title>
@@ -19,7 +19,7 @@
 			<div></div>
 		</div>
 		<div class="content">
-			<div class="description">
+			<div class="instructions">
 				<h3>Instructions:</h3>
 				<br>
 				<p>You’ll see a set of Motivational Driver cards.</p>
