--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,8 +37,9 @@
                 <div class="lane-label">NO</div>
                 <div class="grid-stack no-grid"></div>
             </div>
-        </div>
+		</div>
 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/fitty/2.3.6/fitty.min.js"></script>
         <script src="node_modules/gridstack/dist/gridstack-all.js"></script>
         <script type="module" src="/src/js/main.js"></script>
 	</div>
