--- a/frontend/strength.html
+++ b/frontend/strength.html
@@ -17,7 +17,58 @@
     <div class="content">
 
         <div id="top-bar">
-            <div id="instructions">Choose an option below:</div>
+            <div>
+                <div class="info-container">
+                    <button id="infoBtn" class="info-btn">ℹ️</button>
+                    <span id="instructions">Your instructions here</span>
+                </div>
+                <div id="infoOverlay" class="info-overlay">
+                    <div class="info-content">
+                        <button id="closeInfoBtn" class="close-info-btn">✖</button>
+                        <h3>Instructions:</h3>
+                        <br>
+                        <p>You’ll see a set of Motivational Driver cards.</p>
+                        <p>Each card describes something that can feed a person’s energy, interest, or motivation.</p>
+                        <p>There’s no right way to do this.</p>
+                        <p>Go with what feels most true for you.</p>
+                        <br>
+                        <h4>Step 1 — Read &amp; Notice</h4>
+                        <p>Read through the cards one by one.</p>
+                        <p>As you do, notice:</p>
+                        <ul>
+                            <li>which cards feel energising or meaningful</li>
+                            <li>which cards feel neutral</li>
+                            <li>which cards feel draining or effortful</li>
+                        </ul>
+                        <p>You don’t need to analyse why.</p>
+                        <p>Just notice your reaction.</p>
+                        <br>
+                        <h4>Step 2 — Choose Your Top Four</h4>
+                        <p>From the full set, choose four drivers that matter most to you overall.</p>
+                        <p>Think whole of life, not just work.</p>
+                        <p>These are the drivers that:</p>
+                        <ul>
+                            <li>help you feel engaged</li>
+                            <li>make things feel more sustainable</li>
+                            <li>matter even when life gets busy</li>
+                        </ul>
+                        <br>
+                        <h4>Step 3 — Choose One Main Driver</h4>
+                        <p>From your four, choose one main driver.</p>
+                        <p>This is the driver that feels:</p>
+                        <ul>
+                            <li>most important right now, or</li>
+                            <li>hardest to do without</li>
+                        </ul>
+                        <p>You don’t need to justify this choice.</p>
+                        <br>
+                        <h4>Take Your Time</h4>
+                        <p>If you want to pause partway through, that’s fine.</p>
+                        <p>If you want to come back later, that’s fine too.</p>
+                        <p>When you’re ready, move on to the reflection.</p>
+                    </div>
+                </div>
+            </div>
             <button id="continueBtn" style="display: none;">Continue</button>
         </div>
 
@@ -49,6 +100,15 @@
 
         <div class="phase-4" style="display: none;">
             <div class="grid-stack summary-grid"></div>
+        </div>
+
+        <div class="phase-5" style="display: none;">
+            <div class="grid-stack overuses-grid"></div>
+        </div>
+
+        <div class="exit" style="display: none;">
+            <h1>Thanks for using this programe!</h1>
+            <h2>Continue using our courses on LearnWorlds.</h2>
         </div>
     </div>
 </body>
