--- a/frontend/motivation.html
+++ b/frontend/motivation.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="/images/icon.png" />
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="node_modules/gridstack/dist/gridstack.min.css">
-	<script src="node_modules/gridstack/dist/gridstack-all.js"></script>
+	<!-- <script src="node_modules/gridstack/dist/gridstack-all.js"></script> -->
 	<script type="module" src="/src/js/main.js"></script>
 
     <title>Sorting Cards</title>
